; ModuleID = '/home/carl/AnghaBench/tig/src/extr_io.c_io_run_buf.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_io.c_io_run_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.io = type { i32 }

@IO_RD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @io_run_buf(i8** %0, i8* %1, i64 %2, i8* %3, i32 %4) #0 {
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.io, align 4
  store i8** %0, i8*** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %12 = load i32, i32* @IO_RD, align 4
  %13 = load i8*, i8** %9, align 8
  %14 = load i8**, i8*** %6, align 8
  %15 = call i64 @io_run(%struct.io* %11, i32 %12, i8* %13, i32* null, i8** %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %23

17:                                               ; preds = %5
  %18 = load i8*, i8** %7, align 8
  %19 = load i64, i64* %8, align 8
  %20 = load i32, i32* %10, align 4
  %21 = call i64 @io_read_buf(%struct.io* %11, i8* %18, i64 %19, i32 %20)
  %22 = icmp ne i64 %21, 0
  br label %23

23:                                               ; preds = %17, %5
  %24 = phi i1 [ false, %5 ], [ %22, %17 ]
  %25 = zext i1 %24 to i32
  ret i32 %25
}

declare dso_local i64 @io_run(%struct.io*, i32, i8*, i32*, i8**) #1

declare dso_local i64 @io_read_buf(%struct.io*, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
